# prism

./: .gitignore  ACK-prism-cwe-coverage-handoff-review.md  ACK-prism-cwe-coverage-handoff.md  ALGORITHMS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF-prism-cwe-phase1.md  LICENSE  LLM.md  Makefile  PLAN-E9-E10.md  PLAN.md  Plan.md  README.md  SLICING_METHODS.md  STATUS-prism-cwe-phase1.md  STATUS-prism-cwe-phase2.md  STATUS-prism-cwe-phase3.md  TESTING.md  TEST_COVERAGE.md  TEST_GAPS.md  coverage.sh
.github/workflows/: ci.yml  release.yml
coverage/: badges.md  matrix.json  report.json  table.md
docs/: E12-type-system.md  SPEC-ALGO-LANGUAGE-COVERAGE.md  access-network-analysis-evaluation.md  arrow-anon-functions.md  cpg-architecture.md  cpg-improvements.md  cpg-phase6-cfg-plan.md  cross-language-coverage.md  jsx-tsx-react-plan.md  language-analysis-gaps.md  language-expansion-plan.md  prism-ccpp-expansion-plan.md  prism-ccpp-gap-analysis.md  prism-follow-up-e13-next.md  shell-bash-plan.md  terraform-hcl-plan.md
docs/c-cpp/: function-pointer-resolution.md
docs/how-to/: README.md  update-coverage-matrix.md
docs/superpowers/plans/: 2026-04-24-t1-hygiene-pre-cwe-handoff.md  2026-04-25-phase1-cwe-go.md  2026-04-26-phase15-cfg-aware-paired-check.md  2026-04-26-phase15-per-arg-dfg.md  2026-04-26-phase2-cwe-python.md
docs/superpowers/specs/: 2026-04-24-hygiene-pass-pre-cwe-handoff-design.md  2026-04-25-phase1-cwe-go-design-review-2.md  2026-04-25-phase1-cwe-go-design-review-3.md  2026-04-25-phase1-cwe-go-design-review.md  2026-04-25-phase1-cwe-go-design.md  2026-04-26-phase15-per-arg-dfg.md  2026-04-26-phase2-cwe-python.md  2026-04-28-phase3-cwe-js-ts.md
scripts/: extract_tests.py  generate_coverage_badges.py  regenerate_hapi_snapshot.sh
src/: access_path.rs  ast.rs  call_graph.rs  cfg.rs  cpg.rs  cpg_cache.rs  data_flow.rs  diff.rs  lib.rs  live_types.rs  main.rs  output.rs  queries.rs  react_hooks.rs  slice.rs  terraform.rs  type_db.rs  type_provider.rs
src/algorithms/: absence_slice.rs  angle_slice.rs  barrier_slice.rs  callback_dispatcher_slice.rs  chop.rs  circular_slice.rs  conditioned_slice.rs  contract_slice.rs  delta_slice.rs  echo_slice.rs  full_flow.rs  gradient_slice.rs  horizontal_slice.rs  left_flow.rs  membrane_slice.rs  mod.rs  original_diff.rs  parent_function.rs  peer_consistency_slice.rs  phantom_slice.rs  primitive_slice.rs  provenance_slice.rs  quantum_slice.rs  relevant_slice.rs  resonance_slice.rs  spiral_slice.rs  symmetry_slice.rs  taint.rs  thin_slice.rs  threed_slice.rs  vertical_slice.rs
src/frameworks/: gin.rs  gorilla_mux.rs  mod.rs  nethttp.rs
src/frameworks/js_ts/: express.rs  fastify.rs  koa.rs  mod.rs  nestjs.rs
src/frameworks/python/: django.rs  drf.rs  fastapi.rs  flask.rs  mod.rs
src/languages/: mod.rs
src/sanitizers/: js_ts.rs  mod.rs  path.rs  python.rs  shell.rs
src/type_providers/: cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust_provider.rs  typescript.rs
tests/: algo_angle_horizontal_test.rs  algo_novel_absence_test.rs  algo_novel_echo_misc_test.rs  algo_novel_membrane_test.rs  algo_novel_provenance_test.rs  algo_novel_test.rs  algo_paper_test.rs  algo_quantum_test.rs  algo_spiral_circular_test.rs  algo_taint_cve_test.rs  algo_taint_lang_test.rs  algo_taint_sink_test.rs  algo_taint_test.rs  algo_taxonomy_misc_test.rs  algo_taxonomy_test.rs  algo_theoretical_test.rs  algo_vertical_threed_test.rs  ast_access_path_test.rs  ast_binding_test.rs  ast_cpg_test.rs  ast_dfg_test.rs  ast_field_test.rs  ast_test.rs  c_algo_test.rs  c_complex_test.rs  c_test.rs  cli_test.rs  cpp_test.rs  integration_call_graph_test.rs  integration_core_test.rs  integration_coverage_test.rs  integration_test.rs  javascript_algo_test.rs  javascript_destructuring_test.rs  javascript_lang_test.rs  javascript_test.rs  lua_test.rs  rust_lang_test.rs  typescript_test.rs
tests/algo/: angle_horizontal_test.rs  novel_absence_test.rs  novel_echo_misc_test.rs  novel_membrane_test.rs  novel_provenance_test.rs  paper_test.rs  quantum_test.rs  spiral_circular_test.rs  taint_cve_test.rs  taint_lang_test.rs  taint_sink_test.rs  taxonomy_misc_test.rs  vertical_threed_test.rs
tests/algo/novel/: absence_infra_test.rs  absence_lang_test.rs  absence_test.rs  callback_dispatcher_test.rs  contract_delta_test.rs  contract_test.rs  echo_misc_lang_test.rs  echo_misc_test.rs  membrane_ext_test.rs  membrane_test.rs  peer_consistency_test.rs  primitive_lang_test.rs  primitive_test.rs  provenance_lang_test.rs  provenance_test.rs
tests/algo/paper/: paper_test.rs
tests/algo/taxonomy/: misc_lang_test.rs  misc_test.rs  sanitizers_python_test.rs  sanitizers_test.rs  taint_cve_test.rs  taint_interprocedural_test.rs  taint_lang_test.rs  taint_sink_go_test.rs  taint_sink_js_ts_test.rs  taint_sink_lang_test.rs  taint_sink_python_test.rs  taint_sink_test.rs
tests/algo/theoretical/: angle_horizontal_test.rs  quantum_lang_test.rs  quantum_test.rs  spiral_circular_test.rs  vertical_threed_test.rs
tests/ast/: access_path_test.rs  binding_test.rs  comment_string_test.rs  cpg_cache_test.rs  cpg_test.rs  cpp_type_provider_test.rs  dfg_test.rs  field_test.rs  import_test.rs  java_type_provider_test.rs  live_types_test.rs  parse_quality_test.rs  python_type_provider_test.rs  rust_type_provider_test.rs  ts_type_provider_test.rs  type_provider_test.rs
tests/cli/: algo_test.rs  output_test.rs  validation_test.rs
tests/common/: mod.rs
tests/fixtures/: hapi-4552.diff
tests/frameworks/: gin_test.rs  gorilla_mux_test.rs  js_ts_test.rs  mod.rs  nethttp_test.rs  python_drf_django_test.rs  python_fastapi_test.rs  python_flask_test.rs  registry_test.rs
tests/integration/: call_graph_test.rs  core_test.rs  coverage_test.rs  cwe_phase1_suppression_test.rs  cwe_phase2_suppression_test.rs  cwe_phase3_suppression_test.rs  hapi_regression_test.rs  scoped_cpg_test.rs
tests/lang/: c_algo_test.rs  c_complex_test.rs  cpp_test.rs  javascript_algo_test.rs  javascript_destructuring_test.rs  javascript_lang_test.rs  lua_test.rs  rust_test.rs  typescript_test.rs
tests/lang/c/: algo_test.rs  (+5 more)
(+143 files in other folders)
