[package]
name = "prism"
version = "0.1.0"
edition = "2021"
description = "Code slicing algorithms for defect-focused automated code review, based on arXiv:2505.17928"
license = "MIT"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
