[package]
name = "prism"
version = "0.1.0"
edition = "2021"
description = "Code slicing algorithms for defect-focused automated code review, based on arXiv:2505.17928"
license = "MIT"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-lua = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
petgraph = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# ── Algorithm tests ──

[[test]]
name = "algo_angle_horizontal"
path = "tests/algo/angle_horizontal_test.rs"

[[test]]
name = "algo_novel_absence"
path = "tests/algo/novel_absence_test.rs"

[[test]]
name = "algo_novel_echo_misc"
path = "tests/algo/novel_echo_misc_test.rs"

[[test]]
name = "algo_novel_membrane"
path = "tests/algo/novel_membrane_test.rs"

[[test]]
name = "algo_novel_provenance"
path = "tests/algo/novel_provenance_test.rs"

[[test]]
name = "algo_paper"
path = "tests/algo/paper_test.rs"

[[test]]
name = "algo_quantum"
path = "tests/algo/quantum_test.rs"

[[test]]
name = "algo_spiral_circular"
path = "tests/algo/spiral_circular_test.rs"

[[test]]
name = "algo_taint_cve"
path = "tests/algo/taint_cve_test.rs"

[[test]]
name = "algo_taint_lang"
path = "tests/algo/taint_lang_test.rs"

[[test]]
name = "algo_taint_sink"
path = "tests/algo/taint_sink_test.rs"

[[test]]
name = "algo_taxonomy_misc"
path = "tests/algo/taxonomy_misc_test.rs"

[[test]]
name = "algo_vertical_threed"
path = "tests/algo/vertical_threed_test.rs"

# ── AST / DFG / CPG tests ──

[[test]]
name = "ast_access_path"
path = "tests/ast/access_path_test.rs"

[[test]]
name = "ast_binding"
path = "tests/ast/binding_test.rs"

[[test]]
name = "ast_cpg"
path = "tests/ast/cpg_test.rs"

[[test]]
name = "ast_dfg"
path = "tests/ast/dfg_test.rs"

[[test]]
name = "ast_field"
path = "tests/ast/field_test.rs"

# ── Language-specific tests ──

[[test]]
name = "lang_c_algo"
path = "tests/lang/c/algo_test.rs"

[[test]]
name = "lang_c_complex"
path = "tests/lang/c/complex_test.rs"

[[test]]
name = "lang_cpp"
path = "tests/lang/cpp/cpp_test.rs"

[[test]]
name = "lang_javascript_algo"
path = "tests/lang/javascript/algo_test.rs"

[[test]]
name = "lang_javascript_destructuring"
path = "tests/lang/javascript/destructuring_test.rs"

[[test]]
name = "lang_javascript_lang"
path = "tests/lang/javascript/lang_test.rs"

[[test]]
name = "lang_lua"
path = "tests/lang/lua/lua_test.rs"

[[test]]
name = "lang_rust"
path = "tests/lang/rust/rust_test.rs"

[[test]]
name = "lang_typescript"
path = "tests/lang/typescript/typescript_test.rs"

# ── Integration tests ──

[[test]]
name = "integration_call_graph"
path = "tests/integration/call_graph_test.rs"

[[test]]
name = "integration_core"
path = "tests/integration/core_test.rs"

[[test]]
name = "integration_coverage"
path = "tests/integration/coverage_test.rs"

# ── CLI tests ──

[[test]]
name = "cli_algo"
path = "tests/cli/algo_test.rs"

[[test]]
name = "cli_output"
path = "tests/cli/output_test.rs"
