[package]
name = "prism"
version = "2.1.2"
edition = "2021"
description = "Code slicing algorithms for defect-focused automated code review, based on arXiv:2505.17928"
license = "MIT"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-hcl = "1.1"
tree-sitter-bash = "0.25"
hcl-rs = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
petgraph = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# ── Algorithm tests: Paper ──

[[test]]
name = "algo_paper"
path = "tests/algo/paper/paper_test.rs"

# ── Algorithm tests: Taxonomy ──

[[test]]
name = "algo_taint_cve"
path = "tests/algo/taxonomy/taint_cve_test.rs"

[[test]]
name = "algo_taint_lang"
path = "tests/algo/taxonomy/taint_lang_test.rs"

[[test]]
name = "algo_taint_sink"
path = "tests/algo/taxonomy/taint_sink_test.rs"

[[test]]
name = "algo_taint_sink_lang"
path = "tests/algo/taxonomy/taint_sink_lang_test.rs"

[[test]]
name = "algo_taint_interprocedural"
path = "tests/algo/taxonomy/taint_interprocedural_test.rs"

[[test]]
name = "algo_taxonomy_misc"
path = "tests/algo/taxonomy/misc_test.rs"

[[test]]
name = "algo_taxonomy_misc_lang"
path = "tests/algo/taxonomy/misc_lang_test.rs"

# ── Algorithm tests: Theoretical ──

[[test]]
name = "algo_angle_horizontal"
path = "tests/algo/theoretical/angle_horizontal_test.rs"

[[test]]
name = "algo_quantum"
path = "tests/algo/theoretical/quantum_test.rs"

[[test]]
name = "algo_quantum_lang"
path = "tests/algo/theoretical/quantum_lang_test.rs"

[[test]]
name = "algo_spiral_circular"
path = "tests/algo/theoretical/spiral_circular_test.rs"

[[test]]
name = "algo_vertical_threed"
path = "tests/algo/theoretical/vertical_threed_test.rs"

# ── Algorithm tests: Novel ──

[[test]]
name = "algo_novel_absence"
path = "tests/algo/novel/absence_test.rs"

[[test]]
name = "algo_novel_absence_lang"
path = "tests/algo/novel/absence_lang_test.rs"

[[test]]
name = "algo_novel_absence_infra"
path = "tests/algo/novel/absence_infra_test.rs"

[[test]]
name = "algo_novel_echo_misc"
path = "tests/algo/novel/echo_misc_test.rs"

[[test]]
name = "algo_novel_echo_misc_lang"
path = "tests/algo/novel/echo_misc_lang_test.rs"

[[test]]
name = "algo_novel_membrane"
path = "tests/algo/novel/membrane_test.rs"

[[test]]
name = "algo_novel_membrane_ext"
path = "tests/algo/novel/membrane_ext_test.rs"

[[test]]
name = "algo_novel_provenance"
path = "tests/algo/novel/provenance_test.rs"

[[test]]
name = "algo_novel_provenance_lang"
path = "tests/algo/novel/provenance_lang_test.rs"

[[test]]
name = "algo_novel_contract"
path = "tests/algo/novel/contract_test.rs"

# ── AST / DFG / CPG tests ──

[[test]]
name = "ast_access_path"
path = "tests/ast/access_path_test.rs"

[[test]]
name = "ast_binding"
path = "tests/ast/binding_test.rs"

[[test]]
name = "ast_cpg"
path = "tests/ast/cpg_test.rs"

[[test]]
name = "ast_dfg"
path = "tests/ast/dfg_test.rs"

[[test]]
name = "ast_field"
path = "tests/ast/field_test.rs"

[[test]]
name = "ast_type_provider"
path = "tests/ast/type_provider_test.rs"

[[test]]
name = "ast_cpp_type_provider"
path = "tests/ast/cpp_type_provider_test.rs"

[[test]]
name = "ast_ts_type_provider"
path = "tests/ast/ts_type_provider_test.rs"

[[test]]
name = "ast_java_type_provider"
path = "tests/ast/java_type_provider_test.rs"

[[test]]
name = "ast_rust_type_provider"
path = "tests/ast/rust_type_provider_test.rs"

[[test]]
name = "ast_python_type_provider"
path = "tests/ast/python_type_provider_test.rs"

[[test]]
name = "ast_live_types"
path = "tests/ast/live_types_test.rs"

[[test]]
name = "ast_comment_string"
path = "tests/ast/comment_string_test.rs"

[[test]]
name = "ast_import"
path = "tests/ast/import_test.rs"

[[test]]
name = "ast_parse_quality"
path = "tests/ast/parse_quality_test.rs"

# ── Language-specific tests ──

[[test]]
name = "lang_c_algo"
path = "tests/lang/c/algo_test.rs"

[[test]]
name = "lang_c_algo_expand"
path = "tests/lang/c/algo_expand_test.rs"

[[test]]
name = "lang_c_cve"
path = "tests/lang/c/cve_test.rs"

[[test]]
name = "lang_c_cve_fixture"
path = "tests/lang/c/cve_fixture_test.rs"

[[test]]
name = "lang_c_complex"
path = "tests/lang/c/complex_test.rs"

[[test]]
name = "lang_c_firmware"
path = "tests/lang/c/firmware_test.rs"

[[test]]
name = "lang_cpp"
path = "tests/lang/cpp/cpp_test.rs"

[[test]]
name = "lang_cpp_algo"
path = "tests/lang/cpp/algo_test.rs"

[[test]]
name = "lang_javascript_algo"
path = "tests/lang/javascript/algo_test.rs"

[[test]]
name = "lang_javascript_destructuring"
path = "tests/lang/javascript/destructuring_test.rs"

[[test]]
name = "lang_javascript_lang"
path = "tests/lang/javascript/lang_test.rs"

[[test]]
name = "lang_javascript_arrow"
path = "tests/lang/javascript/arrow_test.rs"

[[test]]
name = "lang_go"
path = "tests/lang/go/algo_test.rs"

[[test]]
name = "lang_go_advanced"
path = "tests/lang/go/advanced_test.rs"

[[test]]
name = "lang_go_lang"
path = "tests/lang/go/lang_test.rs"

[[test]]
name = "lang_java_algo"
path = "tests/lang/java/algo_test.rs"

[[test]]
name = "lang_lua"
path = "tests/lang/lua/lua_test.rs"

[[test]]
name = "lang_lua_algo"
path = "tests/lang/lua/algo_test.rs"

[[test]]
name = "lang_rust"
path = "tests/lang/rust/rust_test.rs"

[[test]]
name = "lang_rust_algo"
path = "tests/lang/rust/algo_test.rs"

[[test]]
name = "lang_bash"
path = "tests/lang/bash/bash_test.rs"

[[test]]
name = "lang_bash_algo"
path = "tests/lang/bash/algo_test.rs"

[[test]]
name = "lang_terraform"
path = "tests/lang/terraform/terraform_test.rs"

[[test]]
name = "lang_terraform_algo"
path = "tests/lang/terraform/algo_test.rs"

[[test]]
name = "lang_tsx"
path = "tests/lang/tsx/tsx_test.rs"

[[test]]
name = "lang_tsx_jsx_call"
path = "tests/lang/tsx/jsx_call_test.rs"

[[test]]
name = "lang_tsx_hooks"
path = "tests/lang/tsx/hooks_test.rs"

[[test]]
name = "lang_typescript"
path = "tests/lang/typescript/typescript_test.rs"

[[test]]
name = "lang_typescript_lang"
path = "tests/lang/typescript/lang_test.rs"

# ── Integration tests ──

[[test]]
name = "integration_call_graph"
path = "tests/integration/call_graph_test.rs"

[[test]]
name = "integration_core"
path = "tests/integration/core_test.rs"

[[test]]
name = "integration_scoped_cpg"
path = "tests/integration/scoped_cpg_test.rs"

[[test]]
name = "integration_coverage"
path = "tests/integration/coverage_test.rs"

# ── CLI tests ──

[[test]]
name = "cli_algo"
path = "tests/cli/algo_test.rs"

[[test]]
name = "cli_validation"
path = "tests/cli/validation_test.rs"

[[test]]
name = "cli_output"
path = "tests/cli/output_test.rs"
